# systing

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  Cross.toml  LICENSE  README.md  SCHEMA_CHANGES.md  STREAMING.md  build.rs  flake.nix  setup-hooks.sh  trace.pb
.cargo/: config.toml
.claude/: CLAUDE.md  README.md  instructions.md
.claude/agents/: rust-bpf-code-reviewer.md
.claude/context/: network-schema.md  perfetto-messages.md  perfetto-reference.md  stack-trace-schema.md
.github/workflows/: build-kernel.yml  ci.yml  install_deps.sh  version-bump.yml
crates/gopclntab/: Cargo.toml  README.md
crates/gopclntab/src/: elf.rs  error.rs  lib.rs
cross/: aarch64.Dockerfile  riscv64.Dockerfile
docs/: PROFILE_EXPORT_FORMAT.md  TRACE_CONFIG_FORMAT.md  USAGE.adoc  analysis_tcp_poll_blocking.md
examples/: fabulous_send_chunk.json  pthread.json  sched_ext.json  tcp_userspace_latency.json
hooks/: pre-commit  pre-push  prepare-commit-msg
kernel/: build.sh
scripts/: cross-build.sh  generate-vmlinux-header.sh  generate_python_bindings.py  run-integration-tests.sh  setup-pystacks.sh  setup_mcp.sh
skills/systing-analyze/: SKILL.md
skills/systing-trace/: SKILL.md
src/: analyze.rs  build_id_store.rs  cgroup.rs  cmds.rs  duckdb.rs  events.rs  exit_snapshot.rs  gopclntab.rs  gopclntab_resolver.rs  gvisor_guest.rs  lib.rs  main.rs  marker_recorder.rs  mcp.rs  memory_recorder.rs  network_recorder.rs  parquet_paths.rs  parquet_to_perfetto.rs  parquet_writer.rs  perf.rs  perf_recorder.rs  perfetto.rs  process.rs  profile_export.rs  py_addr.rs  ringbuf.rs  sandbox_maps.rs  sched.rs  session_recorder.rs  stack_recorder.rs  stream.rs  symbol_shorten.rs  symbolize.rs  syscall.rs  syscall_recorder.rs  systing.rs  systing_core.rs  tcp_recorder.rs  traced_command.rs  utid.rs  (+3 more)
src/analyze/: cpu_stats.rs  flamegraph.rs  mod.rs  network_connections.rs  network_interfaces.rs  network_socket_pairs.rs  query.rs  sched_stats.rs
src/bpf/: systing.bpf.c  systing_describe.bpf.c  systing_system.bpf.c  vmlinux_aarch64.h  vmlinux_riscv64.h  vmlinux_x86_64.h
src/cmds/: describe.rs  profile.rs  system.rs
src/cmds/profile/: process.rs
src/convert/: mod.rs  perfetto_to_sqlite.rs  sqlite_to_perfetto.rs
src/events/: config.rs  mod.rs  probe.rs  tests.rs  writer.rs
src/output/: mod.rs  types.rs
src/parquet/: mod.rs  paths.rs  sink.rs  writer.rs
src/pystacks/: bindings.rs  bpf_maps.rs  discovery.rs  linetable.rs  mod.rs  offsets.rs  process.rs  pystacks.rs  stack_walker.rs  symbols.rs  types.rs
src/pystacks/bindings/: mod.rs  v3_10_0.rs  v3_11_0.rs  v3_12_0.rs  v3_13_0.rs  v3_14_0.rs  v3_8_0.rs  v3_9_0.rs
src/pystacks/bpf/: pystacks.bpf.c  pystacks.bpf.h
src/pystacks/bpf/include/: OffsetConfig.h  PyPidData.h  binary_id.h  bpf_read_helpers.bpf.c  bpf_read_helpers.bpf.h  common.bpf.c  common.h  namespace_helpers.bpf.c  namespace_helpers.bpf.h  pid_target_helpers.bpf.c  pid_target_helpers.bpf.h  pthread_helpers.bpf.c  pthread_helpers.bpf.h  py_structs.h  stack_walker.h  structs.h  task_helpers.bpf.c  task_helpers.bpf.h
src/record/: collector.rs  mod.rs
src/sqlite/: mod.rs  schema.rs  writer.rs
src/tpu/: client.rs  discovery.rs  metrics_client.rs  metrics_recorder.rs  mod.rs  proto_dump.rs  recorder.rs  xspace.rs
src/tpu/proto/: profiler_service.proto  tpu_metric_service.proto
src/trace/: constants.rs  mod.rs  models.rs  schema.rs
src/validation/: config.rs  cross_validate.rs  duckdb_queries.rs  mod.rs  parquet_queries.rs  perfetto_queries.rs  perfetto_reader.rs  queries.rs  result.rs  runner.rs  test_utils.rs
tests/: analyze_commands.rs  build_id_record.rs  exited_fd_bound.rs  gopclntab_record.rs  gvisor_record.rs  memory_recorder.rs  missed_events.rs  network_throughput.rs  perf_counter.rs  privilege_separation.rs  stream_unix.rs  trace_validation.rs
tests/common/: mod.rs  netns.rs  workload.rs
tools/: README.md  analyze_packets.py  analyze_trace.py  test_retransmit_detection.py  trace_queries.sql
