[package]
name = "systing"
version = "0.1.0"
edition = "2021"
authors = ["Josef Bacik <josef@toxicpanda.com>"]
license = "MIT"
description = "A libbpf based tracer to figure out what an application is doing"

[build-dependencies]
libbpf-cargo = "0.25.0-beta"
bindgen = { version = "0.71.1" }
pkg-config = "0.3.32"

[dependencies]
anyhow = "1.0"
bitfield = "0.19.0"
blazesym = "0.2.0-rc.4"
clap = { version = "4.5.20", features = ["derive"] }
ctrlc = "3.4"
debuginfod = { version = "0.2.1", features = ["fs-cache", "tracing"] }
libbpf-rs = "0.25.0"
libc = "0.2"
nix = { version = "0.29.0", features = ["ioctl"] }
perfetto_protos = "0.48.1"
plain = "0.2"
protobuf = "3.7.1"
rand = "0.9.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
syscalls = "0.6"
sysinfo = "0.33.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "time"] }

[features]
generate-vmlinux-header = []
pystacks = []

[profile.release]
lto = "thin"
