[package]
name = "systing"
version = "0.1.0"
edition = "2021"
authors = ["Josef Bacik <josef@toxicpanda.com>"]
license = "MIT"
description = "A libbpf based tracer to figure out what an application is doing"

[build-dependencies]
libbpf-cargo = "0.25.0-beta"
libbpf-rs = "0.25.0"
bindgen = { version = "0.71.1" }
pkg-config = "0.3.32"

[dependencies]
anyhow = "1.0"
bitfield = "0.19.0"
blazesym = "0.2.0-rc.4"
clap = { version = "4.5.20", features = ["derive"] }
ctrlc = "3.4"
dashmap = "6"
debuginfod = { version = "0.2.1", features = ["fs-cache", "tracing"] }
dns-lookup = "2.0"
duckdb = { version = "1.1.1", features = ["bundled", "parquet"] }
parquet = "54"
arrow = "54"
flate2 = "1.0"
indicatif = "0.17"
libbpf-rs = "0.25.0"
libc = "0.2"
nix = { version = "0.29.0", features = ["ioctl"] }
perfetto_protos = "0.48.1"
plain = "0.2"
protobuf = "3.7.1"
rayon = "1.10"
rand = "0.9.0"
regex = "1.11.1"
rusqlite = "0.32"
rmcp = { version = "0.13", features = ["server", "transport-io", "macros"] }
schemars = "0.8"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
syscalls = "0.6"
sysinfo = "0.33.1"
tempfile = "3.13"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "io-std"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "time"] }

[features]
generate-vmlinux-header = []
pystacks = []

[lib]
name = "systing"
path = "src/lib.rs"

[[bin]]
name = "systing-analyze"
path = "src/bin/systing_analyze.rs"

[[bin]]
name = "systing-util"
path = "src/bin/systing_util.rs"

[profile.release]
lto = "thin"
