[workspace]
members = [".", "crates/gopclntab"]

[package]
name = "systing"
version = "1.10.9"
edition = "2021"
# Floor set by safe (no-unsafe) std::arch::x86_64::__cpuid in detect_hypervisor.
rust-version = "1.89"
authors = ["Josef Bacik <josef@toxicpanda.com>"]
license = "MIT"
description = "A libbpf based tracer to figure out what an application is doing"

[build-dependencies]
libbpf-cargo = "0.25.0-beta"
libbpf-rs = "0.25.0"

[features]
default = ["duckdb-bundled"]
duckdb-bundled = ["duckdb/bundled", "duckdb/parquet"]

[dependencies]
anyhow = "1.0"
bitfield = "0.19.0"
# Pinned exactly: the old "0.2.0-rc.4" requirement also matched later stable
# 0.2.x releases (where Sym::code_info became Option<Box<CodeInfo>>), so
# `cargo install` without --locked picked an incompatible version. An exact pin
# keeps fresh resolutions reproducible.
blazesym = "=0.2.3"
clap = { version = "4.5.20", features = ["derive"] }
ctrlc = "3.4"
dashmap = "6"
debuginfod = { version = "0.2.1", features = ["fs-cache", "tracing"] }
dns-lookup = "2.0"
duckdb = "1.10504"
gopclntab = { path = "crates/gopclntab", version = "0.1" }
parquet = "54"
arrow = "54"
flate2 = "1.0"
indicatif = "0.17"
libbpf-rs = "0.25.0"
libc = "0.2"
nix = { version = "0.29.0", features = ["ioctl"] }
perfetto_protos = "0.48.1"
plain = "0.2"
protobuf = "3.7.1"
rand = "0.9.0"
regex = "1.11.1"
rmcp = { version = "0.13", features = ["server", "transport-io", "macros"] }
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
syscalls = "0.6"
# Only the "system" feature is used (CPU frequency polling, kernel version).
# Default features pull in rayon (via "multithread", which parallelizes the
# slow /proc/cpuinfo fallback) plus disk/network/component/user code we never
# call.
sysinfo = { version = "0.33.1", default-features = false, features = ["system"] }
tempfile = "3.13"
vsock = "0.5"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "io-std"] }
object = { version = "0.36", default-features = false, features = ["read", "elf"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "time"] }
prost = "0.14"
prost-types = "0.14"
tonic = { version = "0.14", features = ["transport"] }
tonic-prost = "0.14"
tokio-stream = "0.1"
tonic-reflection = { version = "0.14", default-features = false }

[lib]
name = "systing"
path = "src/lib.rs"

[[bin]]
name = "systing-analyze"
path = "src/bin/systing_analyze.rs"

[[bin]]
name = "systing-util"
path = "src/bin/systing_util.rs"

[profile.release]
lto = "thin"
